# apsis

./: .env.example  .gitignore  .importlinter  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/: __init__.py
app/core/: config.py  db_registry.py  repo.py  startup.py
app/core/celestrak/: driver.py  exceptions.py  registry.py  types.py
app/core/celestrak/drivers/: http.py
app/core/events/: bus.py  dispatcher.py  worker.py
app/core/exceptions/: handlers.py
app/core/jobs/handlers/: __init__.py  tle_refresh.py
app/tracking/api/: __init__.py  ground_stations.py  satellites.py
app/tracking/event_handlers/: recompute_passes.py
app/tracking/models/: __init__.py  ground_station.py  pass_prediction.py  satellite.py
app/tracking/repos/: __init__.py  ground_station.py  pass_prediction.py  satellite.py
app/tracking/schemas/: __init__.py  ground_station.py  pass_prediction.py  satellite.py
app/tracking/services/: _skyfield.py  geometry.py  passes.py  propagation.py
app/tracking/use_cases/: compute_passes.py  get_ground_station_passes.py  ingest_tles.py  list_ground_stations.py  list_satellites.py  register_ground_station.py
docs/adr/: 0001-no-broker.md  0002-claim-strategies.md  0003-postgis.md  0004-layering.md  README.md
migrations/: env.py
migrations/versions/: 3bc965b4d0d6_initial_schema.py
tests/integration/: conftest.py  test_outbox_pipeline.py  test_spatial_queries.py
tests/unit/: test_app_smoke.py
tests/unit/core/celestrak/: test_http_client.py
tests/unit/tracking/: test_compute_passes.py  test_event_handlers.py  test_geometry.py  test_get_passes.py  test_ingest_tles.py  test_list_use_cases.py  test_passes.py  test_propagation.py  test_register_ground_station.py
